Checked in By: Bhavesh Nechlani Reason: 1) Trade request validation based on instrument-type 2) Wallet transaction logs. 3) Wallet balance update